nbeesrc-jan-10-2013/src/nbpflcompiler/parser.output
Terminals unused in grammar

   PFL_IPV6ADDR
   PFL_MUOLMUL


State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: Statement $end

    1 Statement: BoolExpression FullEncap
    2          | FullEncap Action
    3          | BoolExpression FullEncap Action

    4 FullEncap: /* empty */
    5          | PFL_FULLENCAP

    6 Action: ReturnPkt
    7       | ExtractFields

    8 ExtractFields: PFL_EXTRACT_FIELDS '(' FieldsList ')'

    9 FieldsList: FieldsListItem
   10           | FieldsList ',' FieldsListItem

   11 FieldsListItem: PFL_PROTOFIELD
   12               | PFL_MULTIPROTOFIELD
   13               | PFL_PROTOMULTIFIELD
   14               | PFL_PROTOFIELD_INDEX
   15               | PFL_PROTOMULTIFIELD_INDEX

   16 ReturnPkt: PFL_RETURN_PACKET PFL_ON PFL_PORT GenericNumber

   17 UnaryExpression: '(' BoolExpression ')'
   18                | BoolOperand Tunnel
   19                | PFL_NOT UnaryExpression
   20                | BoolOperand Tunnel PFL_IN InExpression
   21                | BoolOperand Tunnel PFL_NOTIN NotInExpression

   22 Tunnel: /* empty */
   23       | PFL_TUNNELED

   24 InExpression: ProtoOrAny
   25             | InExpression PFL_IN ProtoOrAny
   26             | InExpression PFL_NOTIN NotInExpression

   27 NotInExpression: Proto
   28                | NotInExpression PFL_NOTIN Proto
   29                | NotInExpression PFL_IN InExpression

   30 ProtoOrAny: Proto
   31           | PFL_ANY
   32           | PFL_ANY Repeater

   33 Proto: ProtocolOrSet Repeater Tunnel
   34      | ProtocolOrSet Tunnel

   35 ProtocolOrSet: BoolOperand
   36              | SetOfProtocol

   37 SetOfProtocol: '{' ElementOfSet '}'

   38 ElementOfSet: SetOrExpression
   39             | ElementOfSet ',' SetOrExpression

   40 Repeater: PFL_ADD
   41         | PFL_MUL
   42         | PFL_QUESTION

   43 SetOrExpression: SetAndExpression
   44                | SetOrExpression PFL_OR SetAndExpression

   45 SetAndExpression: SetUnaryExpression
   46                 | SetAndExpression PFL_AND SetAndExpression

   47 SetUnaryExpression: '(' SetOrExpression ')'
   48                   | PFL_NOT SetUnaryExpression
   49                   | BoolOperand

   50 BoolExpression: OrExpression

   51 OrExpression: AndExpression
   52             | OrExpression PFL_OR AndExpression

   53 AndExpression: UnaryExpression
   54              | AndExpression PFL_AND AndExpression

   55 BoolOperand: Protocol
   56            | RelExpression

   57 sensitive: /* empty */
   58          | PFL_SENSITIVE

   59 RelExpression: ProtoFieldOrProtofieldIndex PFL_MATCHES PFL_STRING sensitive
   60              | ProtoFieldOrProtofieldIndex PFL_CONTAINS PFL_STRING sensitive
   61              | BitwiseExpression PFL_EQ BitwiseExpression
   62              | BitwiseExpression PFL_NE BitwiseExpression
   63              | BitwiseExpression PFL_GT BitwiseExpression
   64              | BitwiseExpression PFL_GE BitwiseExpression
   65              | BitwiseExpression PFL_LT BitwiseExpression
   66              | BitwiseExpression PFL_LE BitwiseExpression

   67 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD
   68                            | PFL_PROTOFIELD_INDEX

   69 Protocol: PFL_PROTOCOL
   70         | PFL_PROTOCOL_INDEX

   71 BitwiseExpression: ShiftExpression
   72                  | BitwiseExpression PFL_BWAND ShiftExpression
   73                  | BitwiseExpression PFL_BWOR ShiftExpression
   74                  | BitwiseExpression PFL_BWXOR ShiftExpression
   75                  | PFL_BWNOT ShiftExpression
   76                  | '(' BitwiseExpression ')'

   77 ShiftExpression: AddExpression
   78                | ShiftExpression PFL_SHL AddExpression
   79                | ShiftExpression PFL_SHR AddExpression

   80 AddExpression: MulExpression
   81              | AddExpression PFL_ADDADD MulExpression
   82              | AddExpression PFL_SUB MulExpression

   83 MulExpression: Term
   84              | MulExpression PFL_MULMUL MulExpression

   85 Term: GenericNumber
   86     | PFL_IPV4ADDR
   87     | PFL_MACADDR
   88     | PFL_PROTOFIELD
   89     | PFL_PROTOFIELD_INDEX
   90     | PFL_PROTOCOL '[' GenericNumber ']'
   91     | PFL_PROTOCOL '[' GenericNumber ':' GenericNumber ']'

   92 GenericNumber: PFL_NUMBER
   93              | PFL_HEXNUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 17 47 76
')' (41) 8 17 47 76
',' (44) 10 39
':' (58) 91
'[' (91) 90 91
']' (93) 90 91
'{' (123) 37
'}' (125) 37
error (256)
PFL_RETURN_PACKET (258) 16
PFL_EXTRACT_FIELDS (259) 8
PFL_ON (260) 16
PFL_PORT (261) 16
PFL_NUMBER (262) 92
PFL_HEXNUMBER (263) 93
PFL_PROTOCOL (264) 69 90 91
PFL_PROTOFIELD (265) 11 67 88
PFL_PROTOCOL_INDEX (266) 70
PFL_PROTOFIELD_INDEX (267) 14 68 89
PFL_PROTOMULTIFIELD_INDEX (268) 15
PFL_MULTIPROTOFIELD (269) 12
PFL_PROTOMULTIFIELD (270) 13
PFL_IPV4ADDR (271) 86
PFL_IPV6ADDR (272)
PFL_MACADDR (273) 87
PFL_ADD (274) 40
PFL_ADDADD (275) 81
PFL_SUB (276) 82
PFL_MULMUL (277) 84
PFL_BWAND (278) 72
PFL_BWOR (279) 73
PFL_BWXOR (280) 74
PFL_BWNOT (281) 75
PFL_SHL (282) 78
PFL_SHR (283) 79
PFL_AND (284) 46 54
PFL_OR (285) 44 52
PFL_NOT (286) 19 48
PFL_EQ (287) 61
PFL_NE (288) 62
PFL_LT (289) 65
PFL_LE (290) 66
PFL_GT (291) 63
PFL_GE (292) 64
PFL_MATCHES (293) 59
PFL_CONTAINS (294) 60
PFL_SENSITIVE (295) 58
PFL_STRING (296) 59 60
PFL_IN (297) 20 25 29
PFL_NOTIN (298) 21 26 28
PFL_QUESTION (299) 42
PFL_ANY (300) 31 32
PFL_TUNNELED (301) 23
PFL_FULLENCAP (302) 5
PFL_MUL (303) 41
PFL_MUOLMUL (304)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Statement (59)
    on left: 1 2 3, on right: 0
FullEncap (60)
    on left: 4 5, on right: 1 2 3
Action (61)
    on left: 6 7, on right: 2 3
ExtractFields (62)
    on left: 8, on right: 7
FieldsList (63)
    on left: 9 10, on right: 8 10
FieldsListItem (64)
    on left: 11 12 13 14 15, on right: 9 10
ReturnPkt (65)
    on left: 16, on right: 6
UnaryExpression (66)
    on left: 17 18 19 20 21, on right: 19 53
Tunnel (67)
    on left: 22 23, on right: 18 20 21 33 34
InExpression (68)
    on left: 24 25 26, on right: 20 25 26 29
NotInExpression (69)
    on left: 27 28 29, on right: 21 26 28 29
ProtoOrAny (70)
    on left: 30 31 32, on right: 24 25
Proto (71)
    on left: 33 34, on right: 27 28 30
ProtocolOrSet (72)
    on left: 35 36, on right: 33 34
SetOfProtocol (73)
    on left: 37, on right: 36
ElementOfSet (74)
    on left: 38 39, on right: 37 39
Repeater (75)
    on left: 40 41 42, on right: 32 33
SetOrExpression (76)
    on left: 43 44, on right: 38 39 44 47
SetAndExpression (77)
    on left: 45 46, on right: 43 44 46
SetUnaryExpression (78)
    on left: 47 48 49, on right: 45 48
BoolExpression (79)
    on left: 50, on right: 1 3 17
OrExpression (80)
    on left: 51 52, on right: 50 52
AndExpression (81)
    on left: 53 54, on right: 51 52 54
BoolOperand (82)
    on left: 55 56, on right: 18 20 21 35 49
sensitive (83)
    on left: 57 58, on right: 59 60
RelExpression (84)
    on left: 59 60 61 62 63 64 65 66, on right: 56
ProtoFieldOrProtofieldIndex (85)
    on left: 67 68, on right: 59 60
Protocol (86)
    on left: 69 70, on right: 55
BitwiseExpression (87)
    on left: 71 72 73 74 75 76, on right: 61 62 63 64 65 66 72 73 74
    76
ShiftExpression (88)
    on left: 77 78 79, on right: 71 72 73 74 75 78 79
AddExpression (89)
    on left: 80 81 82, on right: 77 78 79 81 82
MulExpression (90)
    on left: 83 84, on right: 80 81 82 84
Term (91)
    on left: 85 86 87 88 89 90 91, on right: 83
GenericNumber (92)
    on left: 92 93, on right: 16 85 90 91


state 0

    0 $accept: . Statement $end

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    PFL_FULLENCAP         shift, and go to state 11
    '('                   shift, and go to state 12

    $default  reduce using rule 4 (FullEncap)

    Statement                    go to state 13
    FullEncap                    go to state 14
    UnaryExpression              go to state 15
    BoolExpression               go to state 16
    OrExpression                 go to state 17
    AndExpression                go to state 18
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


state 1

   92 GenericNumber: PFL_NUMBER .

    $default  reduce using rule 92 (GenericNumber)


state 2

   93 GenericNumber: PFL_HEXNUMBER .

    $default  reduce using rule 93 (GenericNumber)


state 3

   69 Protocol: PFL_PROTOCOL .
   90 Term: PFL_PROTOCOL . '[' GenericNumber ']'
   91     | PFL_PROTOCOL . '[' GenericNumber ':' GenericNumber ']'

    '['  shift, and go to state 29

    $default  reduce using rule 69 (Protocol)


state 4

   67 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD .
   88 Term: PFL_PROTOFIELD .

    PFL_MATCHES   reduce using rule 67 (ProtoFieldOrProtofieldIndex)
    PFL_CONTAINS  reduce using rule 67 (ProtoFieldOrProtofieldIndex)
    $default      reduce using rule 88 (Term)


state 5

   70 Protocol: PFL_PROTOCOL_INDEX .

    $default  reduce using rule 70 (Protocol)


state 6

   68 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD_INDEX .
   89 Term: PFL_PROTOFIELD_INDEX .

    PFL_MATCHES   reduce using rule 68 (ProtoFieldOrProtofieldIndex)
    PFL_CONTAINS  reduce using rule 68 (ProtoFieldOrProtofieldIndex)
    $default      reduce using rule 89 (Term)


state 7

   86 Term: PFL_IPV4ADDR .

    $default  reduce using rule 86 (Term)


state 8

   87 Term: PFL_MACADDR .

    $default  reduce using rule 87 (Term)


state 9

   75 BitwiseExpression: PFL_BWNOT . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 33
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


state 10

   19 UnaryExpression: PFL_NOT . UnaryExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 34
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


state 11

    5 FullEncap: PFL_FULLENCAP .

    $default  reduce using rule 5 (FullEncap)


state 12

   17 UnaryExpression: '(' . BoolExpression ')'
   76 BitwiseExpression: '(' . BitwiseExpression ')'

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    BoolExpression               go to state 35
    OrExpression                 go to state 17
    AndExpression                go to state 18
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 36
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


state 13

    0 $accept: Statement . $end

    $end  shift, and go to state 37


state 14

    2 Statement: FullEncap . Action

    PFL_RETURN_PACKET   shift, and go to state 38
    PFL_EXTRACT_FIELDS  shift, and go to state 39

    Action         go to state 40
    ExtractFields  go to state 41
    ReturnPkt      go to state 42


state 15

   53 AndExpression: UnaryExpression .

    $default  reduce using rule 53 (AndExpression)


state 16

    1 Statement: BoolExpression . FullEncap
    3          | BoolExpression . FullEncap Action

    PFL_FULLENCAP  shift, and go to state 11

    $default  reduce using rule 4 (FullEncap)

    FullEncap  go to state 43


state 17

   50 BoolExpression: OrExpression .
   52 OrExpression: OrExpression . PFL_OR AndExpression

    PFL_OR  shift, and go to state 44

    $default  reduce using rule 50 (BoolExpression)


state 18

   51 OrExpression: AndExpression .
   54 AndExpression: AndExpression . PFL_AND AndExpression

    PFL_AND  shift, and go to state 45

    $default  reduce using rule 51 (OrExpression)


state 19

   18 UnaryExpression: BoolOperand . Tunnel
   20                | BoolOperand . Tunnel PFL_IN InExpression
   21                | BoolOperand . Tunnel PFL_NOTIN NotInExpression

    PFL_TUNNELED  shift, and go to state 46

    $default  reduce using rule 22 (Tunnel)

    Tunnel  go to state 47


state 20

   56 BoolOperand: RelExpression .

    $default  reduce using rule 56 (BoolOperand)


state 21

   59 RelExpression: ProtoFieldOrProtofieldIndex . PFL_MATCHES PFL_STRING sensitive
   60              | ProtoFieldOrProtofieldIndex . PFL_CONTAINS PFL_STRING sensitive

    PFL_MATCHES   shift, and go to state 48
    PFL_CONTAINS  shift, and go to state 49


state 22

   55 BoolOperand: Protocol .

    $default  reduce using rule 55 (BoolOperand)


state 23

   61 RelExpression: BitwiseExpression . PFL_EQ BitwiseExpression
   62              | BitwiseExpression . PFL_NE BitwiseExpression
   63              | BitwiseExpression . PFL_GT BitwiseExpression
   64              | BitwiseExpression . PFL_GE BitwiseExpression
   65              | BitwiseExpression . PFL_LT BitwiseExpression
   66              | BitwiseExpression . PFL_LE BitwiseExpression
   72 BitwiseExpression: BitwiseExpression . PFL_BWAND ShiftExpression
   73                  | BitwiseExpression . PFL_BWOR ShiftExpression
   74                  | BitwiseExpression . PFL_BWXOR ShiftExpression

    PFL_BWAND  shift, and go to state 50
    PFL_BWOR   shift, and go to state 51
    PFL_BWXOR  shift, and go to state 52
    PFL_EQ     shift, and go to state 53
    PFL_NE     shift, and go to state 54
    PFL_LT     shift, and go to state 55
    PFL_LE     shift, and go to state 56
    PFL_GT     shift, and go to state 57
    PFL_GE     shift, and go to state 58


state 24

   71 BitwiseExpression: ShiftExpression .
   78 ShiftExpression: ShiftExpression . PFL_SHL AddExpression
   79                | ShiftExpression . PFL_SHR AddExpression

    PFL_SHL  shift, and go to state 59
    PFL_SHR  shift, and go to state 60

    $default  reduce using rule 71 (BitwiseExpression)


state 25

   77 ShiftExpression: AddExpression .
   81 AddExpression: AddExpression . PFL_ADDADD MulExpression
   82              | AddExpression . PFL_SUB MulExpression

    PFL_ADDADD  shift, and go to state 61
    PFL_SUB     shift, and go to state 62

    $default  reduce using rule 77 (ShiftExpression)


state 26

   80 AddExpression: MulExpression .
   84 MulExpression: MulExpression . PFL_MULMUL MulExpression

    PFL_MULMUL  shift, and go to state 63

    $default  reduce using rule 80 (AddExpression)


state 27

   83 MulExpression: Term .

    $default  reduce using rule 83 (MulExpression)


state 28

   85 Term: GenericNumber .

    $default  reduce using rule 85 (Term)


state 29

   90 Term: PFL_PROTOCOL '[' . GenericNumber ']'
   91     | PFL_PROTOCOL '[' . GenericNumber ':' GenericNumber ']'

    PFL_NUMBER     shift, and go to state 1
    PFL_HEXNUMBER  shift, and go to state 2

    GenericNumber  go to state 64


state 30

   90 Term: PFL_PROTOCOL . '[' GenericNumber ']'
   91     | PFL_PROTOCOL . '[' GenericNumber ':' GenericNumber ']'

    '['  shift, and go to state 29


state 31

   88 Term: PFL_PROTOFIELD .

    $default  reduce using rule 88 (Term)


state 32

   89 Term: PFL_PROTOFIELD_INDEX .

    $default  reduce using rule 89 (Term)


state 33

   75 BitwiseExpression: PFL_BWNOT ShiftExpression .
   78 ShiftExpression: ShiftExpression . PFL_SHL AddExpression
   79                | ShiftExpression . PFL_SHR AddExpression

    PFL_SHL  shift, and go to state 59
    PFL_SHR  shift, and go to state 60

    $default  reduce using rule 75 (BitwiseExpression)


state 34

   19 UnaryExpression: PFL_NOT UnaryExpression .

    $default  reduce using rule 19 (UnaryExpression)


state 35

   17 UnaryExpression: '(' BoolExpression . ')'

    ')'  shift, and go to state 65


state 36

   61 RelExpression: BitwiseExpression . PFL_EQ BitwiseExpression
   62              | BitwiseExpression . PFL_NE BitwiseExpression
   63              | BitwiseExpression . PFL_GT BitwiseExpression
   64              | BitwiseExpression . PFL_GE BitwiseExpression
   65              | BitwiseExpression . PFL_LT BitwiseExpression
   66              | BitwiseExpression . PFL_LE BitwiseExpression
   72 BitwiseExpression: BitwiseExpression . PFL_BWAND ShiftExpression
   73                  | BitwiseExpression . PFL_BWOR ShiftExpression
   74                  | BitwiseExpression . PFL_BWXOR ShiftExpression
   76                  | '(' BitwiseExpression . ')'

    PFL_BWAND  shift, and go to state 50
    PFL_BWOR   shift, and go to state 51
    PFL_BWXOR  shift, and go to state 52
    PFL_EQ     shift, and go to state 53
    PFL_NE     shift, and go to state 54
    PFL_LT     shift, and go to state 55
    PFL_LE     shift, and go to state 56
    PFL_GT     shift, and go to state 57
    PFL_GE     shift, and go to state 58
    ')'        shift, and go to state 66


state 37

    0 $accept: Statement $end .

    $default  accept


state 38

   16 ReturnPkt: PFL_RETURN_PACKET . PFL_ON PFL_PORT GenericNumber

    PFL_ON  shift, and go to state 67


state 39

    8 ExtractFields: PFL_EXTRACT_FIELDS . '(' FieldsList ')'

    '('  shift, and go to state 68


state 40

    2 Statement: FullEncap Action .

    $default  reduce using rule 2 (Statement)


state 41

    7 Action: ExtractFields .

    $default  reduce using rule 7 (Action)


state 42

    6 Action: ReturnPkt .

    $default  reduce using rule 6 (Action)


state 43

    1 Statement: BoolExpression FullEncap .
    3          | BoolExpression FullEncap . Action

    PFL_RETURN_PACKET   shift, and go to state 38
    PFL_EXTRACT_FIELDS  shift, and go to state 39

    $default  reduce using rule 1 (Statement)

    Action         go to state 69
    ExtractFields  go to state 41
    ReturnPkt      go to state 42


state 44

   52 OrExpression: OrExpression PFL_OR . AndExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    AndExpression                go to state 70
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


state 45

   54 AndExpression: AndExpression PFL_AND . AndExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    AndExpression                go to state 71
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


state 46

   23 Tunnel: PFL_TUNNELED .

    $default  reduce using rule 23 (Tunnel)


state 47

   18 UnaryExpression: BoolOperand Tunnel .
   20                | BoolOperand Tunnel . PFL_IN InExpression
   21                | BoolOperand Tunnel . PFL_NOTIN NotInExpression

    PFL_IN     shift, and go to state 72
    PFL_NOTIN  shift, and go to state 73

    $default  reduce using rule 18 (UnaryExpression)


state 48

   59 RelExpression: ProtoFieldOrProtofieldIndex PFL_MATCHES . PFL_STRING sensitive

    PFL_STRING  shift, and go to state 74


state 49

   60 RelExpression: ProtoFieldOrProtofieldIndex PFL_CONTAINS . PFL_STRING sensitive

    PFL_STRING  shift, and go to state 75


state 50

   72 BitwiseExpression: BitwiseExpression PFL_BWAND . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 76
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


state 51

   73 BitwiseExpression: BitwiseExpression PFL_BWOR . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 77
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


state 52

   74 BitwiseExpression: BitwiseExpression PFL_BWXOR . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 78
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


state 53

   61 RelExpression: BitwiseExpression PFL_EQ . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 80
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 54

   62 RelExpression: BitwiseExpression PFL_NE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 81
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 55

   65 RelExpression: BitwiseExpression PFL_LT . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 82
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 56

   66 RelExpression: BitwiseExpression PFL_LE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 83
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 57

   63 RelExpression: BitwiseExpression PFL_GT . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 84
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 58

   64 RelExpression: BitwiseExpression PFL_GE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 85
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


state 59

   78 ShiftExpression: ShiftExpression PFL_SHL . AddExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    AddExpression  go to state 86
    MulExpression  go to state 26
    Term           go to state 27
    GenericNumber  go to state 28


state 60

   79 ShiftExpression: ShiftExpression PFL_SHR . AddExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    AddExpression  go to state 87
    MulExpression  go to state 26
    Term           go to state 27
    GenericNumber  go to state 28


state 61

   81 AddExpression: AddExpression PFL_ADDADD . MulExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    MulExpression  go to state 88
    Term           go to state 27
    GenericNumber  go to state 28


state 62

   82 AddExpression: AddExpression PFL_SUB . MulExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    MulExpression  go to state 89
    Term           go to state 27
    GenericNumber  go to state 28


state 63

   84 MulExpression: MulExpression PFL_MULMUL . MulExpression
